--- a/Dissertation/part_related_work.tex
+++ b/Dissertation/part_related_work.tex
@@ -315,6 +315,15 @@ Locksmith реализован на основе библиотеки CIL~\cite{
 Было проведено экспериментальное исследование, выделено три категории неправильного использования и создан инструмент для поиска таких случаев.
 Кроме того инструмент пытается помочь разработчикам и автоматически пытается преобразовать код таким образом, чтобы вместо глобальных переменных использовались локальные параметры.
 
+В работах~\cite{FreeRTOS,RacesFreeRtos} представлен подход к поиску состойний гонки в ядрах операционных систем на примере FreeRTOS. 
+Однако, большую часть статей занимает описание построения окружения для ядра, то есть, описание того, что может выполняться параллельно. 
+Дело в том, что в ядре имеется много активностей, которые выполняются после наступления некоторого события. 
+Для статического анализа необходимо искусственно создать некоторую \textit{main}-функцию, в которой будут описаны те активности, которые могут выполняться параллельно. 
+Например, задана взаимосвязь между обработчиками прерываний, отключением прерываний и функции приостановки работы (suspend). 
+Эта взаимосвязь не выражается с помощью стандартных POSIX API, поэтому и нужна специфическая модель окружения и анализ, учитывающий особенности ядра. 
+Сам анализ многопоточных программ является расширением анализа явных значений на множества (вариация, анализа многоугольников).
+А значит, снова возникает проблема потери точности анализа при любых операциях с указателями.
+
 %\newpage
 %============================================================================================================================
 
@@ -403,6 +412,10 @@ Locksmith реализован на основе библиотеки CIL~\cite{
 
 Некоторые развития подхода к редукции частичных порядков представлены в статье~\cite{Abdulla:2014}.
 Экспериментальные данные показывают большое ускорение по сравнению с оригинальным методом, однако, как и в статье~\cite{Basler:2009}, такие результаты возможны только на таких программах, потоки в которых выполняют однотипные действия. 
+
+В работе~\cite{KroeningLMST15} авторы предлагают расширение для редукции частичных порядков для анализа низкоуровневых программ, содержащих вложенные прерывания. 
+Как и все оптимизации при попытке рассмотреть чередования, этот подход также страдает недостаточной масштабируемостью. 
+Даже на небольших примерах, он не может доказать корректность программы, уходя в таймаут.
 
 Как мы видим, очень много исследователей развивают методы статической верификации, основанные на переборе возможных чередований операций нескольких потоков. 
 Несмотря на обилие различных техник и оптимизаций, характерное время работы инструмента анализа составляет порядка 1с на 1 строку кода. 
