--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -1,3 +1,233 @@
+@InProceedings{RacesFreeRtos,
+author="Chopra, Nikita
+and Pai, Rekha
+and D'Souza, Deepak",
+editor="Caires, Lu{\'i}s",
+title="Data Races and Static Analysis for Interrupt-Driven Kernels",
+booktitle="Programming Languages and Systems",
+year="2019",
+publisher="Springer International Publishing",
+address="Cham",
+pages="697--723",
+isbn="978-3-030-17184-1"
+}
+
+
+@inproceedings{Cordeiro2012,
+ author = {Cordeiro, Lucas and Morse, Jeremy and Nicole, Denis and Fischer, Bernd},
+ title = {Context-Bounded Model Checking with ESBMC 1.17},
+ booktitle = {Proceedings of the 18th International Conference on Tools and Algorithms for the Construction and Analysis of Systems},
+ series = {TACAS'12},
+ year = {2012},
+ isbn = {978-3-642-28755-8},
+ location = {Tallinn, Estonia},
+ pages = {534--537},
+ numpages = {4},
+ url = {http://dx.doi.org/10.1007/978-3-642-28756-5_42},
+ doi = {10.1007/978-3-642-28756-5_42},
+ acmid = {2260570},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg}
+} 
+
+@inproceedings{BeyerCPA07,
+ author = {Beyer, Dirk and Henzinger, Thomas A. and Th\'{e}oduloz, Gr\'{e}gory},
+ title = {Configurable software verification: concretizing the convergence of model checking and program analysis},
+ booktitle = {Proceedings of CAV},
+ year = {2007},
+ isbn = {978-3-540-73367-6},
+ location = {Berlin, Germany},
+ pages = {504--518},
+ numpages = {15},
+ acmid = {1770419},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg}
+} 
+
+@inproceedings{CooperativeBeyer18,
+ author = {Beyer, Dirk and Jakobs, Marie-Christine and Lemberger, Thomas and Wehrheim, Heike},
+ title = {Reducer-based Construction of Conditional Verifiers},
+ booktitle = {Proceedings of the 40th International Conference on Software Engineering},
+ series = {ICSE '18},
+ year = {2018},
+ isbn = {978-1-4503-5638-1},
+ location = {Gothenburg, Sweden},
+ pages = {1182--1193},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/3180155.3180259},
+ doi = {10.1145/3180155.3180259},
+ acmid = {3180259},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {conditional model checking, formal verification, program analysis, sequential combination, software verification, testing}
+} 
+
+@InProceedings{ContextBounding,
+author="Qadeer, Shaz
+and Rehof, Jakob",
+editor="Halbwachs, Nicolas
+and Zuck, Lenore D.",
+title="Context-Bounded Model Checking of Concurrent Software",
+booktitle="Tools and Algorithms for the Construction and Analysis of Systems",
+year="2005",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="93--107",
+isbn="978-3-540-31980-1"
+}
+
+
+@inproceedings {LinuxUseAfterFree,
+author = {Jia-Ju Bai and Julia Lawall and Qiu-Liang Chen and Shi-Min Hu},
+title = {Effective Static Analysis of Concurrency Use-After-Free Bugs in {L}inux Device Drivers},
+booktitle = {2019 {USENIX} Annual Technical Conference ({USENIX} {ATC} 19)},
+year = {2019},
+isbn = {978-1-939133-03-8},
+address = {Renton, WA},
+pages = {255-268},
+url = {https://www.usenix.org/conference/atc19/presentation/bai},
+publisher = {{USENIX} Association},
+month = jul,
+}
+
+@InProceedings{Predicate,
+author={Graf, Susanne
+and Saidi, Hassen},
+editor={Grumberg, Orna},
+title={Construction of abstract state graphs with {PVS}},
+booktitle={Computer Aided Verification},
+year={1997},
+publisher={Springer Berlin Heidelberg},
+address={Berlin, Heidelberg},
+pages={72--83},
+isbn={978-3-540-69195-2}
+}
+
+@inproceedings{KroeningLMST15,
+  author = {Daniel Kroening and
+               Lihao Liang and
+               Tom Melham and
+               Peter Schrammel and
+               Michael Tautschnig},
+  title = {Effective verification of low-level software with nested interrupts},
+  booktitle = {Design, Automation {\&} Test in Europe Conference
+               {\&} Exhibition (DATE 2015)},
+  pages = {229--234},
+  year = {2015},
+  publisher = {ACM},
+  month = {mar},
+  url = {http://dl.acm.org/citation.cfm?id=2755803},
+  biburl = {http://dblp.uni-trier.de/rec/bib/conf/date/KroeningLMST15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@InProceedings{FreeRTOS,
+author={Mukherjee, Suvam
+and Kumar, Arun
+and D'Souza, Deepak},
+editor={Bouajjani, Ahmed
+and Monniaux, David},
+title={Detecting All High-Level Dataraces in an {RTOS} Kernel},
+booktitle={Verification, Model Checking, and Abstract Interpretation},
+year={2017},
+publisher={Springer International Publishing},
+address={Cham},
+pages={405--423},
+isbn={978-3-319-52234-0}
+}
+
+@inproceedings{BornatMPC2000,
+ author = {Bornat, Richard},
+ title = {Proving Pointer Programs in {H}oare Logic},
+ booktitle = {Proceedings of the 5th International Conference on Mathematics of Program Construction},
+ series = {MPC '00},
+ year = {2000},
+ isbn = {3-540-67727-5},
+ pages = {102--126},
+ numpages = {25},
+ url = {http://dl.acm.org/citation.cfm?id=648085.747307},
+ acmid = {747307},
+ publisher = {Springer-Verlag},
+ address = {London, UK, UK},
+}
+
+@inproceedings{Burstall72,
+ author = {Burstall, R M},
+ title = {Some techniques for proving correctness of programs which alter data structures},
+ booktitle = {Machine Intelligence 7},
+ year = {1972},
+ pages = {23--50},
+}
+
+@Article{benchexec2019,
+author={Beyer, Dirk
+and L{\"o}we, Stefan
+and Wendler, Philipp},
+title={Reliable benchmarking: requirements and solutions},
+journal={International Journal on Software Tools for Technology Transfer},
+year={2019},
+month={Feb},
+day={01},
+volume={21},
+number={1},
+pages={1--29},
+issn={1433-2787},
+doi={10.1007/s10009-017-0469-y},
+url={"https://doi.org/10.1007/s10009-017-0469-y}
+}
+
+@InProceedings{kleverPsi,
+author={Novikov, Evgeny
+and Zakharov, Ilja},
+editor={Petrenko, Alexander K.
+and Voronkov, Andrei},
+title={Towards Automated Static Verification of {GNU} {C} Programs},
+booktitle={Perspectives of System Informatics},
+year={2018},
+publisher={Springer International Publishing},
+address={Cham},
+pages={402--416},
+isbn={978-3-319-74313-4}
+}
+
+@InProceedings{kleverIsola,
+author={Novikov, Evgeny
+and Zakharov, Ilja},
+editor={Margaria, Tiziana
+and Steffen, Bernhard},
+title={Verification of Operating System Monolithic Kernels Without Extensions},
+booktitle={Leveraging Applications of Formal Methods, Verification and Validation. Industrial Practice},
+year={2018},
+publisher={Springer International Publishing},
+address={Cham},
+pages={230--248},
+}
+
+@InProceedings{svcomp19,
+author={Beyer, Dirk},
+editor={Beyer, Dirk
+and Huisman, Marieke
+and Kordon, Fabrice
+and Steffen, Bernhard},
+title={Automatic Verification of {C} and {J}ava {P}rograms: {SV-COMP} 2019},
+booktitle={Tools and Algorithms for the Construction and Analysis of Systems},
+year={2019},
+publisher={Springer International Publishing},
+address={Cham},
+pages={133--155},
+isbn={978-3-030-17502-3}
+}
+
+@book{Godefroid:1996,
+ author = {Godefroid, Patrice},
+ editor = {Leeuwen, J. van and Hartmanis, J. and Goos, G.},
+ title = {Partial-Order Methods for the Verification of Concurrent Systems: An Approach to the State-Explosion Problem},
+ year = {1996},
+ isbn = {3540607617},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+}
+
 @inproceedings{SPIN,
 author = {Gerard J.Holzmann},
 title = {The Model Checker SPIN},
