--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -72,6 +72,17 @@ Phobos~\cite{Leveson:1995}.
 системах~\cite{Palix11}.
 \fi
 
+Верификация многопоточных программ всегда являлась более сложной задачей, чем верификация последовательных программ.
+Точное вычисление всех возможных чередований (англ. interleavings), приводит к комбинаторному взрыву числа состояний.
+Поэтому, большинство инструментов статической верификации применяют арзличные техники оптимизации: редукция частичных порядков (англ. partial order reduction)~\cite{Abdulla:2014,Godefroid:1996}, абстракция счетчика (англ. counter abstraction)~\cite{Basler:2009} и другие.
+Тем не менее, большинство современных инструментов статической верификации плохо масштабируются на промышленное программное обеспечение.
+Этот факт подтверждается соревнованием по статической верификации~\cite{svcomp19}.
+Задачи из категории «многопоточность», основанные на драйверах операционной системы Linux вызывают значительные сложности для всех инструментов статической верификации.
+
+Противоположностью методам проверки моделей являются методы статического анализа, которые нацелены на быстрый поиск ошибок без какой-либо уверенности в финальном вердикте.
+Такие инструменты применяют различные фильтры и эвристики для ускорения анализа и поэтому не могут гарантировать корректность, то есть отсутствие ошибок.
+В данной работе представлен подход к статической верификации многопоточного программного обеспечения, который позволяет легко настраивать баланс между скоростью и точностью проводимого анализа. Кроме того, он легко нацеливается на конкретную задачу.
+
 %В частности, анализ типовых ошибок, исправленных за год в ядре операционной системы Linux, показал, что ошибки, связанные с состоянием гонки образуют самый многочисленный класс и составляют около 17\% от всех 
 %\ifsynopsis
 %ошибок.
@@ -132,15 +143,19 @@ Phobos~\cite{Leveson:1995}.
 {\probation}
 Основные результаты работы докладывались~на:
 \begin{itemize}
-  \item Весенний коллоквиум молодых исследователей в области программной инженерии (SYRCoSE: Spring Young Researchers Colloquium on Software Engineering), Санкт-Петербург, 2014 г.;
-  \item Научно-исследовательский семинар лаборатории «Software and Computational Systems Lab» Университета Пассау, Германия, 2014 г.
+  % \item Весенний коллоквиум молодых исследователей в области программной инженерии (SYRCoSE: Spring Young Researchers Colloquium on Software Engineering), Санкт-Петербург, 2014 г.;
+  % \item Научно-исследовательский семинар лаборатории «Software and Computational Systems Lab» Университета Пассау, Германия, 2014 г.
   \item Международная научно-практическая конференция "Инструменты и методы анализа программ" (TMPA: Tools and Methods for Program Analysis), Кострома, 2014 г.
   \item Международный семинар разработчиков CPAchecker, Москва, 2015 г.
   \item Летняя научная школа компании Microsoft (Microsoft Summer School), Кэмбридж, Англия, 2015 г.
   \item Научно-практическая Открытая конференция ИСП РАН, Москва, 2016 г.
   \item Научно-исследовательский семинар лаборатории «Software and Computational Systems Lab» Университета Пассау, Германия, 2016 г.
   \item Международная научно-практическая конференция "Инструменты и методы анализа программ" (TMPA: Tools and Methods for Program Analysis), Москва, 2017 г.
-  \item Международный семинар разработчиков CPAchecker, Падерборн, 2017 г.
+  \item Международный семинар разработчиков CPAchecker, Падерборн, Германия, 2017 г.
+  \item Международный семинар разработчиков CPAchecker, Москва, Россия, 2018 г.
+  \item Соревнования по статической верификации SV-COMP, Прага, Чехия, 2019 г.
+  \item Международный семинар разработчиков CPAchecker, Фрауенинзель, Германия, 2019 г.
+  \item Семинар "Математические вопросы информатики" Мехмат МГУ, Москва, Россия, 2019 г.
 \end{itemize}
 
 % {\contribution} Автор принимал активное участие \ldots
